--- a/Login/index.html
+++ b/Login/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 <body>
-    <form id = "login-form">
-        <input required maxlength="15" type="text" placeholder="What is your name?">
+    <form id = "login-form" class = "hidden">
+        <input required maxlength="15" type="text" placeholder="What is your name?"/>
         <input type="submit" value = "Log In"/>
     </form>
-    <a href="https://nomadcoders.co">Go to courses</a>
+    <h1 id = "greeting" class = "hidden"></h1>
     <script src = "app.js"></script>
 </body>
+
 </html>
