--- a/Login/index.html
+++ b/Login/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
 </head>
 <body>
+    <div id="imgg">
     <form id = "login-form" class = "hidden">
         <input required maxlength="15" type="text" placeholder="What is your name?"/>
         <input type="submit" value = "Log In"/>
     </form>
-    <h2 id = "clock"></h2>
-    <h1 id = "greeting" class = "hidden"></h1>
+    <h1 id = "clock"></h1>
+    <h4 id = "greeting" class = "hidden"></h4>
+
+    <h5>Write down things to do today</h5>
     <form id = "todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter" required>
+        <input type="text" placeholder=""/>
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
@@ -25,6 +28,7 @@
         <span></span>
         <span></span>
     </div>
+</div>
     <script src = "js/greetings.js"></script>
     <script src = "js/clock.js"></script>
     <script src = "js/quotes.js"></script>
