--- a/Login/index.html
+++ b/Login/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
+    <!-- <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+    $("#calculator").load("calculator/calculator.html");
+    $("#calendar").load("Datepicker/calendar.html");
+}); -->
+    </script>
 </head>
 <body>
     <div id="imgg">
@@ -28,6 +35,14 @@
         <span></span>
         <span></span>
     </div>
+    <!-- <div id = "calendar"></div>
+    <div id = "calculator"></div> -->
+    <div id="study">
+        <iframe src="calculator/calculator.html" style = "height:450px;"></iframe>
+        <iframe src="Datepicker/calendar.html" style = "height:350px;width: 320px;"></iframe>
+        <iframe src="Game/game.html" style = "height:350px;width: 500px;"></iframe>
+    </div>
+
 </div>
     <script src = "js/greetings.js"></script>
     <script src = "js/clock.js"></script>
@@ -35,7 +50,6 @@
     <script src = "js/background.js"></script>
     <script src = "js/todo.js"></script>
     <script src = "js/weather.js"></script>
-
 
 </body>
 
