nomad: my crome setting

--- a/Login/index.html
+++ b/Login/index.html
@@ -37,6 +37,7 @@
     </div>
     <!-- <div id = "calendar"></div>
     <div id = "calculator"></div> -->
+
     <div id="study">
         <iframe src="calculator/calculator.html" style = "height:450px;"></iframe>
         <iframe src="Datepicker/calendar.html" style = "height:350px;width: 320px;"></iframe>
@@ -52,5 +53,6 @@
     <script src = "js/weather.js"></script>
 
 </body>
+<footer style = "background-color: black;"></footer>
 
 </html>
